CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.5        |
+-----------------------+
BUGFIXES
20-01-06    Problems with ContentTypeMgr fixed (AJ Tarachanowicz)
17-01-06    Fixed problems with naming conventions in module generator
30-12-05    Fixed bug where contact us template could not be found (Andrey Podshivalov)
21-12-05    Ancestors correctly highlighted in navigation trees (Gerald Fishcer)
20-12-05    Added missing path vars in config template (Tomasz Osmialowski)
20-12-05    Fixed corruption of german language file in default module
19-12-05    Fixed incorrect constant which prevented instant messages from working
            correctly
16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)

IMPROVEMENTS
18-01-06    Test runner now uses pearified SimpleTest and notices are suppressed
            for now, see http://trac.seagullproject.org/wiki/Standards/UnitTesting
17-01-06    Integrated Serendipity blog, see
            http://trac.seagullproject.org/wiki/Integration/Serendipity
17-01-06    Added new 'getAllModules' xml-rpc service
16-01-06    Instantiating a cache object has changed from
            $cache = & SGL::cacheSingleton(); to $cache = & SGL_Cache::singleton();
            Likewise, SGL::clearCache() has changed to SGL_Cache::clear()
10-01-06    Implemented a Savant2 template renderer (Andrey Podshivalov)
09-01-06    Url alias solution fully integrated and database-driven
06-01-06    Added generateRadioList method to SGL_Output (mawan)
06-01-06    Added a wrapper to create html views easily:
                $view = new SGL_HtmlSimpleView($output);
                $html = $view->render();
            (Andrey Podshivalov)
06-01-06    Implemented post-connect query which is used to set the default
            character set for the current connection (MySQL 4.1 or higher). For
            example: SET NAMES utf8
06-01-06    All data object calls are now config driven (freeslacker)