@@ -4,8 +4,8 @@ $words['Subscribe'] = 'Subscribe';
 $words['subscribe'] = 'subscribe';
 $words['Unsubscribe'] = 'Unsubscribe';
 $words['unsubscribe'] = 'unsubscribe';
-$words['Unable to subscribe you to some lists'] = 'Unable to subscribe you to some of the lists. An email was sent to your e-mail address to confirm your action. Please check your e-mail.';
-$words['Unable to unsubscribe you to some lists'] = 'Unable to unsubscribe you to some of the lists. An email was sent to your e-mail address to confirm your action. Please check your e-mail.';
+$words['Unable to subscribe you to some lists'] = 'Unable to subscribe you to all of the selected lists. An email was sent to confirm this action. Please check your e-mail.';
+$words['Unable to unsubscribe you to some lists'] = 'Unable to unsubscribe you to from all of the selected lists. An email was sent to confirm this action. Please check your e-mail.';
 $words['Please fill in the email field'] = 'Please fill in the email field';
 $words['Please enter your name and e-mail address and select the newsletters that you want to subscribe.'] = 'Please enter your name and e-mail address and select the newsletters that you want to subscribe.';
 $words['Please fill in a real name'] = 'Please fill in a real name';
